[gd_scene load_steps=4 format=2]

[ext_resource path="res://Scripts/Client.gd" type="Script" id=1]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.6, 0.6, 0.6, 0.301961 )

[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color( 0.6, 0.6, 0.6, 0.392157 )

[node name="Client" type="Control"]
script = ExtResource( 1 )

[node name="NetworkHUD" type="Panel" parent="."]
margin_right = 288.0
margin_bottom = 80.0
custom_styles/panel = SubResource( 1 )

[node name="Connect" type="Control" parent="NetworkHUD"]
margin_right = 40.0
margin_bottom = 40.0

[node name="Address" type="LineEdit" parent="NetworkHUD/Connect"]
margin_left = 8.0
margin_top = 16.0
margin_right = 280.0
margin_bottom = 40.0
align = 1
placeholder_text = "Server Address"

[node name="Connect" type="Button" parent="NetworkHUD/Connect"]
margin_left = 80.0
margin_top = 48.0
margin_right = 208.0
margin_bottom = 68.0
text = "Connect"

[node name="Disconnect" type="Control" parent="NetworkHUD"]
visible = false
margin_right = 40.0
margin_bottom = 40.0

[node name="Disconnect" type="Button" parent="NetworkHUD/Disconnect"]
margin_left = 80.0
margin_top = 48.0
margin_right = 208.0
margin_bottom = 68.0
disabled = true
text = "Disonnect"

[node name="Chat" type="Panel" parent="."]
margin_left = 64.0
margin_top = 192.0
margin_right = 960.0
margin_bottom = 576.0
custom_styles/panel = SubResource( 2 )

[node name="Label" type="RichTextLabel" parent="Chat"]
margin_right = 896.0
margin_bottom = 320.0

[node name="Message" type="LineEdit" parent="Chat"]
margin_left = 64.0
margin_top = 328.0
margin_right = 832.0
margin_bottom = 352.0

[node name="Send" type="Button" parent="Chat"]
margin_left = 384.0
margin_top = 360.0
margin_right = 512.0
margin_bottom = 380.0
text = "SEND"

[connection signal="pressed" from="NetworkHUD/Connect/Connect" to="." method="_on_Connect_pressed"]
[connection signal="pressed" from="NetworkHUD/Disconnect/Disconnect" to="." method="_on_Disconnect_pressed"]
[connection signal="pressed" from="Chat/Send" to="." method="_on_Send_pressed"]
